--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.2",
     "axios": "^0.26.1",
+    "firebase": "^9.6.11",
+    "json-loader": "^0.5.7",
+    "moment": "^2.29.2",
     "postcss": "^8.4.8",
     "react": "^17.0.2",
+    "react-cookie-consent": "^7.4.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-toast": "^1.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
