updated deployment workflows to include env secret

--- a/.github/workflows/firebase-hosting-staging-merge.yml
+++ b/.github/workflows/firebase-hosting-staging-merge.yml
@@ -7,6 +7,8 @@ on:
     branches:
       - main
 jobs:
+  get_env_file:
+    - run: 'echo ${{ secrets.STAGING_ENV_FILE }} | base64 --decode > .env'
   build_and_deploy:
     runs-on: ubuntu-latest
     environment: Staging
