--- a/.github/workflows/firebase-hosting-staging-merge.yml
+++ b/.github/workflows/firebase-hosting-staging-merge.yml
@@ -8,7 +8,10 @@ on:
       - main
 jobs:
   get_env_file:
-    - run: 'echo ${{ secrets.STAGING_ENV_FILE }} | base64 --decode > .env'
+    runs-on: ubuntu-latest
+    steps:
+      - run: | 
+          'echo ${{ secrets.STAGING_ENV_FILE }} | base64 --decode > .env'
   build_and_deploy:
     runs-on: ubuntu-latest
     environment: Staging
