--- a/.github/workflows/firebase-hosting-staging-pull-request.yml
+++ b/.github/workflows/firebase-hosting-staging-pull-request.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: | 
-          'echo "${{ secrets.STAGING_ENV_FILE }}" > .env'
+          'echo ${{ secrets.STAGING_ENV_FILE }} > .env'
   build_and_preview:
     if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
     runs-on: ubuntu-latest
