--- a/.github/workflows/firebase-hosting-staging-pull-request.yml
+++ b/.github/workflows/firebase-hosting-staging-pull-request.yml
@@ -11,7 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: | 
-          'echo ${{ secrets.STAGING_ENV_FILE }} > .env'
+          echo STAGING_ENV_FILE_CONTENTS > .env
+        env:
+          STAGING_ENV_FILE_CONTENTS: ${{ secrets.STAGING_ENV_FILE }}
   build_and_preview:
     if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
     runs-on: ubuntu-latest
