--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-cookie-consent": "^7.4.1",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-toast": "^1.0.3",
